# Orpheus-FastAPI

./: .env.example  .gitignore  Dockerfile.gpu  README.md  app.py  docker-compose-cpu.yaml  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  restart.flag
src/orpheus_fastapi/: __main__.py  inference.py
templates/: tts.html
tts_engine/: __init__.py  inference.mps  inference.py  speechpipe.py
