[project]
name = "orpheus-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.103.1",
    "jinja2>=3.1.2",
    "numpy>=1.24.0",
    "pydantic>=2.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "snac>=0.3.0",
    "sounddevice>=0.4.6",
    "torch",
    "torchaudio",
    "torchvision",
    "uvicorn>=0.23.2",
]

[project.scripts]
orpheus-fastapi = "orpheus_fastapi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

